[tool.poetry]
name = "pymatched"
version = "0.1.0"
description = "A library which provides functional pattern matching."
authors = ["Seonghyeon Kim <k.seonghyeon@mymusictaste.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
