[tool.poetry]
name = "pymatched"
version = "0.2.1"
description = "A library which provides simple functional pattern matching."
authors = ["Seonghyeon Kim <k.seonghyeon@mymusictaste.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NovemberOscar/pymatched"
keywords = ["functional", "functional programming", "match", "pattern matching"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
